force-app/main/default/objects/EinsteinResponse__c/EinsteinResponse__c.object-meta.xml
<CustomObject>
    <label>Einstein Response</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Einstein Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>