force-app/main/default/objects/EinsteinResponse__c/fields/ChangeInteractivePageState__c.field-meta.xml
<CustomField>
    <fullName>ChangeInteractivePageState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Interactive Page State</label>
    <type>Checkbox</type>
</CustomField>