force-app/main/default/objects/EinsteinResponse__c/fields/ContentRegionState__c.field-meta.xml
<CustomField>
    <fullName>ContentRegionState__c</fullName>
    <label>Content Region State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>