force-app/main/default/objects/EinsteinResponse__c/fields/LWCName__c.field-meta.xml
<CustomField>
    <fullName>LWCName__c</fullName>
    <inlineHelpText>The LWC directory name, no dashes.</inlineHelpText>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>