force-app/main/default/objects/EinsteinResponse__c/fields/ResponseDelay__c.field-meta.xml
<CustomField>
    <fullName>ResponseDelay__c</fullName>
    <label>Response Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>