force-app/main/default/objects/EinsteinResponse__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <label>Target Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>