force-app/main/default/objects/EinsteinResponse__c/fields/UseLWCOverride__c.field-meta.xml
<CustomField>
    <fullName>UseLWCOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use LWC Override</label>
    <type>Checkbox</type>
</CustomField>