force-app/main/default/objects/EinsteinResponse__c/listViews/All_Questions.listView-meta.xml
<ListView>
    <fullName>All_Questions</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>ResponseDelay__c</columns>
    <columns>ContentRegionState__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Questions</label>
</ListView>