force-app/main/default/objects/EinsteinResponse__c/listViews/eResponse.listView-meta.xml
<ListView>
    <fullName>eResponse</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>eResponse</label>
</ListView>